functionstest.tf

      variable "region" {
        default = "us-east-1"
        }

        variable "tags" {
          type = list
            default = ["firstec2","secondec2"]
            }

            variable "ami" {
              type = map
                default = {
                    "us-east-1" = "ami-076c6dbba59aa92e6"
                        "us-west-2" = "ami-0b20a6f09484773af"
                            "ap-south-1" = "ami-0e1d06225679bc1c5"
                              }
                              }


                              resource "aws_instance" "app-dev" {
                                 ami = lookup(var.ami,var.region)
                                    instance_type = "t2.micro"
                                       count = length(var.tags)

                                          tags = {
                                               Name = element(var.tags,count.index)
                                                Date= formatdate("DD MMM YYYY hh:mm ZZZ",timestamp())

                                                       }

                                                       }

                                                       /*
                                                       */

 /*new commit for test*/
